--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -57,20 +57,16 @@ TODO importante // realtando algo
             </div>
         </div>
         <!--*Carrusel de marcas-->
-        <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="linea mt-5"></div>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
+
                     <div class="cards-wrapper">
 
                         <div class="card">
                             <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
-                            </div>
-                        </div>
-
-                        <div class="card">
-                            <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg"  alt="...">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
@@ -82,31 +78,7 @@ TODO importante // realtando algo
 
                         <div class="card">
                             <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg"  alt="...">
-                            </div>
-                        </div>
-
-                        <div class="card">
-                            <div class="image-wrapper">
                                 <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <div class="cards-wrapper">
-
-                        <div class="card">
-                            <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
-                            </div>
-                        </div>
-
-                        <div class="card">
-                            <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg"  alt="...">
                             </div>
                         </div>
 
@@ -118,15 +90,10 @@ TODO importante // realtando algo
 
                         <div class="card">
                             <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg"  alt="...">
-                            </div>
-                        </div>
-
-                        <div class="card">
-                            <div class="image-wrapper">
                                 <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
                             </div>
                         </div>
+
                     </div>
                 </div>
 
@@ -163,19 +130,21 @@ TODO importante // realtando algo
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            <button class="carousel-control-prev a" type="button" data-bs-target="#carouselExampleControls"
                 data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
+                <span class="carousel-control-previous" aria-hidden="true"><img src="../../recursos/imagenes/icons/slideizq.svg" alt=""></span>
+                <span class="visually-hidden bg-primary">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            <button class="carousel-control-next  a" type="button" data-bs-target="#carouselExampleControls"
                 data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="carousel-control-next-" aria-hidden="true"> <img src="../../recursos/imagenes/icons/slidedrch.svg" alt=""></span>
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <div class="linea mb-5"></div>
     </main>
     <!-- *Llamada al controlador del sitio público -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/publico.js"></script>
