--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -27,28 +27,41 @@ TODO importante // realtando algo
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <!-- *Llamada al hoja de estilo css -->
     <link href="../../recursos/estilos/privado/index.css" rel="stylesheet">
+    <!-- *Llamada al hoja de fuentes -->
+    <link href="../../recursos/estilos/publico/fuentes.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- *Contenido principal del documento -->
-    <main class="d-flex justify-content-center align-items-center">
-        <img src="../../recursos/imagenes/logo.svg" class="mx-auto d-block" width="100">
-        <!-- Formulario para iniciar sesión -->
-        <form class="d-none" id="loginForm">
-            <div class="row g-3">
-                <div class="col-sm-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
-                    <label for="correo_electronico" class="form-label">Correo Electrónico</label>
-                    <input id="correo_electronico" type="email" name="correo_electronico" class="form-control" placeholder="pollo.camperosv@gmail.com" required>
-                </div>
-                <div class="col-sm-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
-                    <label for="clave" class="form-label">Contraseña</label>
-                    <input id="clave" type="password" name="clave" class="form-control" required>
-                </div>
-                <div class="text-center">
-                    <button type="submit" class="btn btn-primary"><i class="bi bi-send"></i> Confirmar</button>
-                </div>
+    <main class="d-flex align-items-center justify-content-center flex-column min-vh-100">
+        <!-- Contenedor para la imagen y los formularios -->
+        <div class="container">
+            <!-- Contenedor flex para la imagen y el título -->
+            <div class="d-flex justify-content-center align-items-center mb-5">
+                <!-- Contendedor para logo del feas -->
+                <img src="../../recursos/imagenes/logo.svg" class="me-1" width="75" alt="logo de FeasVerseCompany">        
+                <!-- Contendedor para Título del contenido principal -->
+                <h2 id="mainTitle" class="titillium-web-bold"></h3>
             </div>
-        </form>
+            <!-- Formulario para iniciar sesión -->
+            <form class="d-none bg-light rounded-2 p-3" style="border-color: #146A93;" id="loginForm">
+                <div class="row g-3">
+                    <div class="col-sm-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+                        <label for="correo_electronico" class="form-label titillium-web-regular">Correo Electrónico</label>
+                        <input id="correo_electronico" type="email" name="correo_electronico" class="form-control titillium-web-regular"
+                            placeholder="pollo.camperosv@gmail.com" style="border-color: #146A93;" required>
+                    </div>
+                    <div class="col-sm-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+                        <label for="clave" class="form-label titillium-web-regular">Contraseña</label>
+                        <input id="clave" type="password" name="clave" class="form-control titillium-web-regular" 
+                        placeholder="●●●●●●●●●●" style="border-color: #146A93;" required>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary titillium-web-regular"><i class="bi bi-send"></i> Confirmar</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </main>
     <!-- *Llamada al framework de bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
