--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -64,33 +64,33 @@ TODO importante // realtando algo
 
                     <div class="cards-wrapper">
 
-                        <div class="card">
+                        <div class="card cardM">
                             <div class="image-wrapper">
                                 <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card cardM">
                             <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card cardM">
                             <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card cardM">
                             <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card cardM">
                             <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
@@ -100,51 +100,98 @@ TODO importante // realtando algo
                 <div class="carousel-item">
                     <div class="cards-wrapper">
 
-                        <div class="card">
+                        <div class="card cardM">
                             <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card cardM">
                             <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card cardM">
                             <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card cardM">
                             <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card cardM">
                             <div class="image-wrapper">
-                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
             <button class="carousel-control-prev a" type="button" data-bs-target="#carouselExampleControls"
                 data-bs-slide="prev">
-                <span class="carousel-control-previous" aria-hidden="true"><img src="../../recursos/imagenes/icons/slideizq.svg" alt=""></span>
-                <span class="visually-hidden bg-primary">Previous</span>
+                <span class="carousel-control-previous" aria-hidden="true"><img
+                        src="../../recursos/imagenes/icons/slideizq.svg" alt=""></span>
+                <span class="visually-hidden bg-primary">Anterior</span>
             </button>
             <button class="carousel-control-next  a" type="button" data-bs-target="#carouselExampleControls"
                 data-bs-slide="next">
-                <span class="carousel-control-next-" aria-hidden="true"> <img src="../../recursos/imagenes/icons/slidedrch.svg" alt=""></span>
-                <span class="visually-hidden">Next</span>
+                <span class="carousel-control-next-" aria-hidden="true"> <img
+                        src="../../recursos/imagenes/icons/slidedrch.svg" alt=""></span>
+                <span class="visually-hidden">Sigiente</span>
             </button>
         </div>
         <div class="linea mb-5"></div>
+
+        <!--*Slider de colección más reciente-->
+        <!-- Slider de colección más reciente -->
+        <h1 class="titillium-web-regular text35 mx-5 text-black">Nuestra Colección Más Reciente</h1>
+        <div class="overflow-scroll containerCards d-flex flex-nowrap">
+            <div class="card col-4" id="cardC">
+                <div class="image-wrapper2">
+                    <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                </div>
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</p>
+                </div>
+            </div>
+
+            <div class="card col-4" id="cardC">
+                <div class="image-wrapper2">
+                    <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                </div>
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</p>
+                </div>
+            </div>
+
+            <div class="card col-4" id="cardC">
+                <div class="image-wrapper2">
+                    <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                </div>
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</p>
+                </div>
+            </div>
+
+            <div class="card col-4" id="cardC">
+                <div class="image-wrapper2">
+                    <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                </div>
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</p>
+                </div>
+            </div>
+
+        </div>
     </main>
     <!-- *Llamada al controlador del sitio público -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/publico.js"></script>
