--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -41,10 +41,14 @@ TODO importante // realtando algo
                 <!-- Contendedor para logo del feas -->
                 <img src="../../recursos/imagenes/logo.svg" class="me-1" width="75" alt="logo de FeasVerseCompany">        
                 <!-- Contendedor para Título del contenido principal -->
-                <h2 id="mainTitle" class="titillium-web-bold"></h3>
+                <h2 id="mainTitle" class="titillium-web-bold"></h2>
             </div>
             <!-- Formulario para iniciar sesión -->
-            <form class="d-none bg-light rounded-2 p-3" style="border-color: #146A93;" id="loginForm">
+            <form class="d-none bg-light rounded-2 p-3 mx-md-2 my-4 mt-4 mb-4" style="border-color: #146A93;" id="loginForm">
+                <div class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4 mb-4">
+                    <h4 class="titillium-web-bold">Iniciar Sesión</h4>
+                    <h6 class="titillium-web-light">¡Bienvenido a FEASVERSE - ADMIN!</h6>
+                </div>  
                 <div class="row g-3">
                     <div class="col-sm-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
                         <label for="correo_electronico" class="form-label titillium-web-regular">Correo Electrónico</label>
@@ -54,10 +58,12 @@ TODO importante // realtando algo
                     <div class="col-sm-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
                         <label for="clave" class="form-label titillium-web-regular">Contraseña</label>
                         <input id="clave" type="password" name="clave" class="form-control titillium-web-regular" 
-                        placeholder="●●●●●●●●●●" style="border-color: #146A93;" required>
+                        placeholder="●●●●●●●●●●" style="border-color: #146A93" required >
                     </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary titillium-web-regular"><i class="bi bi-send"></i> Confirmar</button>
+                    <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4 mb-2" 
+                    for="olvidaste_clave" style="color: #146A93;">¿Olvidaste tu contraseña?</label>
+                    <div class="text-center col-sm-12 col-md-6 offset-md-3 mb-2">
+                        <button type="submit" class="btn btn-primary titillium-web-regular" style="background-color: #146A93;"><i class="bi bi-send"></i> Confirmar</button>
                     </div>
                 </div>
             </form>
