slider coleccion más reciente

--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -148,50 +148,42 @@ TODO importante // realtando algo
         <div class="linea mb-5"></div>
 
         <!--*Slider de colección más reciente-->
-        <!-- Slider de colección más reciente -->
-        <h1 class="titillium-web-regular text35 mx-5 text-black">Nuestra Colección Más Reciente</h1>
+        <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Nuestra Colección Más Reciente</h1>
         <div class="overflow-scroll containerCards d-flex flex-nowrap">
             <div class="card col-4" id="cardC">
-                <div class="image-wrapper2">
-                    <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
-                </div>
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                </div>
-            </div>
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3">Zapato UNISEX</p>
+                                </h1>
 
-            <div class="card col-4" id="cardC">
-                <div class="image-wrapper2">
-                    <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
-                </div>
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                </div>
-            </div>
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
 
-            <div class="card col-4" id="cardC">
-                <div class="image-wrapper2">
-                    <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
-                </div>
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                </div>
+                            <div class="column2">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
             </div>
-
-            <div class="card col-4" id="cardC">
-                <div class="image-wrapper2">
-                    <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
-                </div>
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                </div>
-            </div>
-
         </div>
+        <div class="pb-3"></div>
+
+        <!--*Slider de selección especial-->
+        <h1 class="titillium-web-regular text35 mx-5 text-black mt-5">Selección Especial de Nuestro Equipo</h1>
+        </div>
+        <div class="pb-5"></div>
     </main>
     <!-- *Llamada al controlador del sitio público -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/publico.js"></script>
