--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -37,36 +37,59 @@ TODO importante // realtando algo
         <!-- Contenedor para la imagen y los formularios -->
         <div class="container">
             <!-- Contenedor flex para la imagen y el título -->
-            <div class="d-flex justify-content-center align-items-center mb-5">
+            <div class="d-flex justify-content-center  align-items-center mb-5">
                 <!-- Contendedor para logo del feas -->
-                <img src="../../recursos/imagenes/logo.svg" class="me-1" width="75" alt="logo de FeasVerseCompany">        
+                <img src="../../recursos/imagenes/logo.svg" class="me-1" width="65" alt="logo de FeasVerseCompany">
                 <!-- Contendedor para Título del contenido principal -->
                 <h2 id="mainTitle" class="titillium-web-bold"></h2>
             </div>
             <!-- Formulario para iniciar sesión -->
-            <form class="d-none bg-light rounded-2 p-3 mx-md-2 my-4 mt-4 mb-4" style="border-color: #146A93;" id="loginForm">
-                <div class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4 mb-4">
-                    <h4 class="titillium-web-bold">Iniciar Sesión</h4>
-                    <h6 class="titillium-web-light">¡Bienvenido a FEASVERSE - ADMIN!</h6>
-                </div>  
-                <div class="row g-3">
-                    <div class="col-sm-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
-                        <label for="correo_electronico" class="form-label titillium-web-regular">Correo Electrónico</label>
-                        <input id="correo_electronico" type="email" name="correo_electronico" class="form-control titillium-web-regular"
-                            placeholder="pollo.camperosv@gmail.com" style="border-color: #146A93;" required>
-                    </div>
-                    <div class="col-sm-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
-                        <label for="clave" class="form-label titillium-web-regular">Contraseña</label>
-                        <input id="clave" type="password" name="clave" class="form-control titillium-web-regular" 
-                        placeholder="●●●●●●●●●●" style="border-color: #146A93" required >
-                    </div>
-                    <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4 mb-2" 
-                    for="olvidaste_clave" style="color: #146A93;">¿Olvidaste tu contraseña?</label>
-                    <div class="text-center col-sm-12 col-md-6 offset-md-3 mb-2">
-                        <button type="submit" class="btn btn-primary titillium-web-regular" style="background-color: #146A93;"><i class="bi bi-send"></i> Confirmar</button>
-                    </div>
+            <div class="row 3">
+                <div class="col-sm-8 offset-sm-2">
+                    <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
+                        id="loginForm">
+                        <div class="my-5"></div>
+                        <div
+                            class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
+                            <h4 class="titillium-web-bold">Iniciar sesión</h4>
+                            <h6 class="titillium-web-light">¡Bienvenido a FEASVERSE - ADMIN!</h6>
+                        </div>
+                        <div class="row g-3">
+                            <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
+                                <div class="d-flex align-items-center">
+                                    <img src="../../recursos/imagenes/correo.svg" class="me-1 mb-2" width="15"
+                                        alt="candado">
+                                    <label for="correo_electronico" class="form-label titillium-web-regular">Correo
+                                        Electrónico</label>
+                                </div>
+                                <input id="correo_electronico" type="email" name="correo_electronico"
+                                    class="form-control titillium-web-regular" placeholder="pollo.camperosv@gmail.com"
+                                    style="border-color: #146A93;" required>
+                            </div>
+                            <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
+                                <div class="d-flex align-items-center">
+                                    <img src="../../recursos/imagenes/candado2.svg" class="me-1 mb-2" width="15"
+                                        alt="candado">
+                                    <label for="clave" class="form-label titillium-web-regular">Contraseña</label>
+                                </div>
+                                <input id="clave" type="password" name="clave"
+                                    class="form-control titillium-web-regular" placeholder="●●●●●●●●●●"
+                                    style="border-color: #146A93" required>
+                            </div>
+                            <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
+                                for="olvidaste_clave" style="color: #146A93;">¿Olvidaste tu contraseña?</label>
+                            <div class="d-flex justify-content-center">
+                                <div class="text-center col-sm-12 col-md-6">
+                                    <button type="submit" class="btn btn-primary titillium-web-regular"
+                                        style="background-color: #146A93; width: 100%;"><i class="bi bi-send"></i>
+                                        Iniciar sesión</button>
+                                </div>
+                            </div>
+                            <div class="mx-5"></div>
+                        </div>
+                    </form>
                 </div>
-            </form>
+            </div>
         </div>
     </main>
     <!-- *Llamada al framework de bootstrap -->
