--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -177,6 +177,147 @@ TODO importante // realtando algo
                     </div>
                 </a>
             </div>
+
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
         <div class="pb-3"></div>
 
