--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -48,10 +48,10 @@ TODO importante // realtando algo
                 <div class="col-sm-8 offset-sm-2">
                     <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
                         id="loginForm">
-                        <div class="my-5"></div>
+                        <div class="my-3"></div>
                         <div
                             class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
-                            <h4 class="titillium-web-bold">Iniciar sesión</h4>
+                            <h3 class="titillium-web-bold">Iniciar sesión</h3>
                             <h6 class="titillium-web-light">¡Bienvenido a FEASVERSE - ADMIN!</h6>
                         </div>
                         <div class="row g-3">
@@ -60,7 +60,7 @@ TODO importante // realtando algo
                                     <img src="../../recursos/imagenes/correo.svg" class="me-1 mb-2" width="15"
                                         alt="candado">
                                     <label for="correo_electronico" class="form-label titillium-web-regular">Correo
-                                        Electrónico</label>
+                                        electrónico</label>
                                 </div>
                                 <input id="correo_electronico" type="email" name="correo_electronico"
                                     class="form-control titillium-web-regular" placeholder="pollo.camperosv@gmail.com"
@@ -77,12 +77,50 @@ TODO importante // realtando algo
                                     style="border-color: #146A93" required>
                             </div>
                             <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
-                                for="olvidaste_clave" style="color: #146A93;">¿Olvidaste tu contraseña?</label>
+                                for="olvidaste_clave" style="color: #146A93;">
+                                <a href="javascript:void(0);" onclick="showForgotPasswordForm()">¿Olvidaste tu contraseña?</a>
+                            </label>
                             <div class="d-flex justify-content-center">
                                 <div class="text-center col-sm-12 col-md-6">
                                     <button type="submit" class="btn btn-primary titillium-web-regular"
                                         style="background-color: #146A93; width: 100%;"><i class="bi bi-send"></i>
                                         Iniciar sesión</button>
+                                </div>
+                            </div>
+                            <div class="mx-5"></div>
+                        </div>
+                    </form>
+                </div>
+            <!-- Formulario para olvidaste contraseña, paso 1 -->
+            <div class="row 3">
+                <div class="col-sm-8 offset-sm-2">
+                    <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
+                        id="forgetpasswordstepone">
+                        <div class="my-3"></div>
+                        <div
+                            class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
+                            <h3 class="titillium-web-bold">Restablecer contraseña</h3>
+                            <h6 class="text-center titillium-web-light">Por favor, ingrese tu correo electrónico, para mandarle un código para el restablecimiento de contraseña</h6>
+                        </div>
+                        <div class="row g-3">
+                            <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
+                                <div class="d-flex align-items-center">
+                                    <img src="../../recursos/imagenes/correo.svg" class="me-1 mb-2" width="15"
+                                        alt="candado">
+                                    <label for="correo_electronico" class="form-label titillium-web-regular">Correo
+                                        electrónico</label>
+                                </div>
+                                <input id="correo_electronico" type="email" name="correo_electronico"
+                                    class="form-control titillium-web-regular" placeholder="pollo.camperosv@gmail.com"
+                                    style="border-color: #146A93;" required>
+                            </div>
+                            <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
+                                for="volver" style="color: #146A93;"><a href="">Volver al inicio de sesión</a></label>
+                            <div class="d-flex justify-content-center">
+                                <div class="text-center col-sm-12 col-md-6">
+                                    <button type="submit" class="btn btn-primary titillium-web-regular"
+                                        style="background-color: #146A93; width: 100%;"><i class="bi bi-send"></i>
+                                        Mandar código</button>
                                 </div>
                             </div>
                             <div class="mx-5"></div>
