--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -115,12 +115,104 @@ TODO importante // realtando algo
                                     style="border-color: #146A93;" required>
                             </div>
                             <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
-                                for="volver" style="color: #146A93;"><a href="">Volver al inicio de sesión</a></label>
+                                for="volver" style="color: #146A93;">
+                                <a href="javascript:void(0);" onclick="showLoginForm()">
+                                    Volver al inicio de sesión</a>
+                                </label>
+                            <div class="d-flex justify-content-center">
+                                <div class="text-center col-sm-12 col-md-6">
+                                    <button type="submit" class="btn btn-primary titillium-web-regular"
+                                        style="background-color: #146A93; width: 100%;" href="javascript:void(0);" onclick="showForgotPasswordStepTwoForm()">
+                                        <i class="bi bi-send"></i>
+                                        Mandar código
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="mx-5"></div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- Formulario para olvidaste contraseña, paso 2 -->
+            <div class="row 3">
+                <div class="col-sm-8 offset-sm-2">
+                    <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
+                        id="forgetpasswordsteptwo">
+                        <div class="my-3"></div>
+                        <div
+                            class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
+                            <h3 class="titillium-web-bold">Código de verficación</h3>
+                            <h6 class="text-center titillium-web-light">Por favor, ingrese tu el código para poder continuar con los pasos para el restablecer su contraseña</h6>
+                        </div>
+                        <div class="row g-3">
+                            <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
+                                <div class="d-flex align-items-center">
+                                    <img src="../../recursos/imagenes/correo.svg" class="me-1 mb-2" width="15"
+                                        alt="candado">
+                                    <label for="correo_electronico" class="form-label titillium-web-regular">
+                                        Código
+                                    </label>
+                                </div>
+                                <input id="correo_electronico" type="email" name="correo_electronico"
+                                    class="form-control titillium-web-regular" placeholder="pollo.camperosv@gmail.com"
+                                    style="border-color: #146A93;" required>
+                            </div>
+                            <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
+                                for="volver" style="color: #146A93;">
+                                <a href="javascript:void(0);" onclick="showForgotPasswordForm()">
+                                    Volver al al paso anterior
+                                </a>
+                            </label>
+                            <div class="d-flex justify-content-center">
+                                <div class="text-center col-sm-12 col-md-6">
+                                    <button type="submit" class="btn btn-primary titillium-web-regular"
+                                        style="background-color: #146A93; width: 100%;" href="javascript:void(0);" onclick="showForgotPasswordStepThreeForm()"><i class="bi bi-send"></i>
+                                        Confirmar código</button>
+                                </div>
+                            </div>
+                            <div class="mx-5"></div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- Formulario para olvidaste contraseña, paso 3 -->
+            <div class="row 3">
+                <div class="col-sm-8 offset-sm-2">
+                    <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
+                        id="forgetpasswordstepthree">
+                        <div class="my-3"></div>
+                        <div
+                            class="d-flex flex-column justify-content-center align-items-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-4">
+                            <h3 class="titillium-web-bold">Ingrese su nueva contraseña</h3>
+                            <h6 class="text-center titillium-web-light">Ingrese su nueva contraseña, con los estandares de seguridad que le proporcionamos</h6>
+                        </div>
+                        <div class="row g-3">
+                                <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
+                                    <div class="d-flex align-items-center">
+                                        <img src="../../recursos/imagenes/candado2.svg" class="me-1 mb-2" width="15"
+                                            alt="candado">
+                                        <label for="clave" class="form-label titillium-web-regular">Contraseña</label>
+                                    </div>
+                                    <input id="clave" type="password" name="clave"
+                                        class="form-control titillium-web-regular" placeholder="●●●●●●●●●●"
+                                        style="border-color: #146A93" required>
+                                </div>
+                                <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
+                                    <div class="d-flex align-items-center">
+                                        <img src="../../recursos/imagenes/candado2.svg" class="me-1 mb-2" width="15"
+                                            alt="candado">
+                                        <label for="clave2" class="form-label titillium-web-regular">Confirmar contraseña</label>
+                                    </div>
+                                    <input id="clave" type="password" name="clave2"
+                                        class="form-control titillium-web-regular" placeholder="●●●●●●●●●●"
+                                        style="border-color: #146A93" required>
+                                </div>
+                                <div class="mb-2"></div>
                             <div class="d-flex justify-content-center">
                                 <div class="text-center col-sm-12 col-md-6">
                                     <button type="submit" class="btn btn-primary titillium-web-regular"
                                         style="background-color: #146A93; width: 100%;"><i class="bi bi-send"></i>
-                                        Mandar código</button>
+                                        Restablecer contraseña</button>
                                 </div>
                             </div>
                             <div class="mx-5"></div>
