--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -20,6 +20,14 @@ TODO importante // realtando algo
     <!-- *IMPORTACIÓN DE RECURSOS EXTERNOS -->
     <!-- TODO Llamada al icono de la página web -->
     <link type="image/png" rel="icon" href="../../recursos/imagenes/icono.svg">
+    <!-- *Llamada a las hojas de estilos propios de css -->
+    <link href="../../recursos/estilos/publico/index.css" rel="stylesheet">
+    <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
+    <!-- *Llamada a las hojas de estilos del framework -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
 </head>
 
 <body>
@@ -27,9 +35,6 @@ TODO importante // realtando algo
     <main> <!--*Carrusel principal-->
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner carrusel position-relative">
-                <div class="vertical-line position-absolute z-1"></div>
-                <div class="vertical-line position-absolute z-1"></div>
-                <div class="vertical-line position-absolute z-1"></div>
                 <div class="z-2 position-absolute">
                     <div>
                         <h1 class="text-white titillium-web-bold text48">
@@ -320,7 +325,6 @@ TODO importante // realtando algo
             </div>
         </div>
         <div class="pb-3"></div>
-
         <!--*Slider de selección especial-->
         <h1 class="titillium-web-regular text35 mx-5 text-black mt-5">Selección Especial de Nuestro Equipo</h1>
         </div>
@@ -331,13 +335,7 @@ TODO importante // realtando algo
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/publico/index.js"></script>
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="../../recursos/estilos/publico/index.css" rel="stylesheet">
-    <link href="../../recursos/estilos/publico/fuentes.css" rel="stylesheet">
 </body>
 
 </html>
