--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -83,7 +83,7 @@ TODO importante // realtando algo
                             <div class="d-flex justify-content-center">
                                 <div class="text-center col-sm-12 col-md-6">
                                     <button type="submit" class="btn btn-primary titillium-web-regular"
-                                        style="background-color: #146A93; width: 100%;"><i class="bi bi-send"></i>
+                                        style="background-color: #146A93; width: 100%;" onclick="showDashboard()"><i class="bi bi-send"></i>
                                         Iniciar sesión</button>
                                 </div>
                             </div>
@@ -225,7 +225,7 @@ TODO importante // realtando algo
     <!-- *Llamada al framework de bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- *Llamada al controlador del sitio público -->
-    <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
+    <!--<script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>-->
     <script type="text/javascript" src="../../controlador/privado/index.js"></script>
 </body>
 
