Comienzo para el apartado de gestionamiento de cliente del administrador

--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -37,7 +37,7 @@ TODO importante // realtando algo
         <!-- Contenedor para la imagen y los formularios -->
         <div class="container">
             <!-- Contenedor flex para la imagen y el título -->
-            <div class="d-flex justify-content-center  align-items-center mb-5">
+            <div class="d-flex justify-content-center align-items-center> mb-5">
                 <!-- Contendedor para logo del feas -->
                 <img src="../../recursos/imagenes/logo.svg" class="me-1" width="65" alt="logo de FeasVerseCompany">
                 <!-- Contendedor para Título del contenido principal -->
