Plantilla, sitio privado terminada

--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -25,101 +25,7 @@
 
 <body>
     <header id="header"></header>
-    <div id="slide">
-        <div class="wrapper">
-            <aside id="sidebar">
-                <div class="d-flex position-relative">
-                    <button class="toggle-btn" type="button">
-                        <i class="lni lni-grid-alt"><img src="../../recursos/imagenes/logo.svg" class="img1"
-                                alt="FeasVerseCompany" width="50" height="50"></i>
-                    </button>
-
-                    <div class="lineah"></div>
-                    <div class="lineah"></div>
-                </div>
-                <ul class="sidebar-nav">
-                    <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">
-                            <div class="contenedorItemNav">
-                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/houseIcon.svg"
-                                        width="40" height="40"></i>
-                                <span class="text-nav text20 titillium-web-regular" >Inicio</span>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">
-                            <div class="contenedorItemNav">
-                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/workersIcon.svg"
-                                        width="40" height="40"></i>
-                                <span class="text-nav text20 titillium-web-regular">Trabajadores</span>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">
-                            <div class="contenedorItemNav">
-                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/clientIcon.svg"
-                                        width="40" height="40"></i>
-                                <span class="text-nav text20 titillium-web-regular">Clientes</span>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">
-                            <div class="contenedorItemNav">
-                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/shoesIcon.svg"
-                                        width="40" height="40"></i>
-                                <span class="text-nav text20 titillium-web-regular">Zapatos</span>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">
-                            <div class="contenedorItemNav">
-                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/pedidoIcon.svg"
-                                        width="40" height="40"></i>
-                                <span class="text-nav text20 titillium-web-regular">Pedidos</span>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">
-                            <div class="contenedorItemNav">
-                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/marcaIcon.svg"
-                                        width="40" height="40"></i>
-                                <span class="text-nav text20 titillium-web-regular">Marcas</span>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">
-                            <div class="contenedorItemNav" >
-                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/comentIcon.svg"
-                                        width="40" height="40"></i>
-                                <span class="text-nav text20 titillium-web-regular">Comentarios</span>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-                <div class="sidebar-footer">
-                    <a href="#" class="sidebar-link">
-                        <i class="lni lni-exit"></i>
-                        <span>Logout</span>
-                    </a>
-                </div>
-            </aside>
-            <div id="contenedorMAIN" class="position-relative">
-
-            </div>
-        </div>
-    </div>
+    <div id="slide"></div>
     <main id="mainContent">
         <div id="mainTitle" class="text40"></div>
         <h1>
