Animacion de entrada LogIn

--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -41,7 +41,7 @@ TODO importante // realtando algo
                 <!-- Contendedor para logo del feas -->
                 <img src="../../recursos/imagenes/logo.svg" class="me-1" width="65" alt="logo de FeasVerseCompany">
                 <!-- Contendedor para Título del contenido principal -->
-                <h2 id="mainTitle" class="titillium-web-bold"></h2>
+                <h1 id="mainTitle" class="titillium-web-black"></h1>
             </div>
             <!-- Formulario para iniciar sesión -->
             <div class="row 3">
