Inicio del panel principal - distribucion

--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -16,6 +16,7 @@
     <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
     <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
+    <link href="/recursos/estilos/privado/panel_principal.css" rel="stylesheet">
     <!-- *Llamada a las hojas de estilos del framework -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -27,36 +28,18 @@
     <header id="header"></header>
     <div id="slide"></div>
     <main id="mainContent">
-        <div id="mainTitle" class="text40"></div>
-        <h1>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias voluptates laborum aliquid, fugiat
-            molestiae similique rerum natus dignissimos, id vero ducimus corporis? Nihil obcaecati numquam voluptatum
-            tempora quisquam, in pariatur?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptates in voluptatem sed cumque
-            eaque vel eligendi ea est dicta, quidem praesentium provident, unde quam eveniet ex quas quis veniam.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi similique tempora libero qui voluptatibus
-            numquam adipisci alias ipsa! In, a nam? Deleniti unde quam blanditiis. Deserunt totam sed voluptate eius!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, iure? Totam recusandae suscipit laudantium
-            vitae optio delectus numquam, asperiores earum ipsa reiciendis dolores! Temporibus sit voluptates facere
-            dignissimos qui harum!
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium animi numquam saepe voluptate. Maxime
-            quam illum a doloremque nostrum eligendi iusto dignissimos ea placeat provident aspernatur ipsa, culpa,
-            deleniti itaque.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolor nemo odio quam, beatae nulla tempore
-            repellendus porro modi, officiis deserunt veritatis consectetur? Dicta maiores rerum tempore molestias
-            quisquam iure.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque temporibus nobis magnam vitae explicabo
-            illum, veritatis perspiciatis, exercitationem necessitatibus ipsum sint cum quam consequatur vero sapiente
-            architecto voluptas, neque dolorem?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit accusantium facere saepe? Vitae vero dicta
-            beatae non commodi corrupti, qui sunt veritatis! Atque quas amet vero magni itaque soluta similique.
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia similique corrupti tempore cum labore
-            eligendi blanditiis ea fugit nisi repellendus repudiandae, molestiae rerum, dolorum eos quia voluptas itaque
-            rem assumenda!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, fuga recusandae quae debitis quas,
-            voluptate repudiandae ea exercitationem iusto praesentium architecto nesciunt veritatis ut hic atque. Atque,
-            possimus rerum. Optio?
-        </h1>
+        <div class="ContenedorT">
+            <div class="ItemsContenedorMain">
+                <div class="ContenedorSaludo">
+                    <div id="mainTitle" class="text40 "></div>
+                </div>
+                <div class="ContenedorGrafica">
+                    <div class="grafica">
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer id="footer"></footer>
 
