Continuacion en panel principal

--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -29,14 +29,12 @@
     <div id="slide"></div>
     <main id="mainContent">
         <div class="ContenedorT">
-            <div class="ItemsContenedorMain">
+            <div class="ItemsContenedorMain shadow-lg">
                 <div class="ContenedorSaludo">
                     <div id="mainTitle" class="text40 "></div>
                 </div>
                 <div class="ContenedorGrafica">
-                    <div class="grafica">
-
-                    </div>
+                        <img src="/recursos/imagenes/Grafica.png" alt="">
                 </div>
             </div>
         </div>
