--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- TODO Título del documento -->
-    <title>FeasVerse Panel Privado</title>
+    <title>FeasVerse Trabajadores</title>
     <!-- Metadatos de la página web -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,6 @@
     <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
     <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/panel_principal.css" rel="stylesheet">
     <!-- *Llamada a las hojas de estilos del framework -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -28,24 +27,14 @@
     <header id="header"></header>
     <div id="slide"></div>
     <main id="mainContent">
-        <div class="ContenedorT">
-            <div class="ItemsContenedorMain shadow-lg">
-                <div class="ContenedorSaludo">
-                    <div id="mainTitle" class="text40 "></div>
-                </div>
-                <div class="ContenedorGrafica">
-                    <img src="/recursos/imagenes/Grafica.png" alt="">
-                </div>
-            </div>
-        </div>
+        
     </main>
     <footer id="footer"></footer>
 
-    <script src="script.js"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
     <!-- *Llamada al controlador del sitio privado -->
-    <script type="text/javascript" src="../../controlador/privado/panel_principal.js"></script>
+    <script type="text/javascript" src="../../controlador/privado/trabajadores.js"></script>
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
