--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -16,6 +16,7 @@
     <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
     <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/trabajadores.css" rel="stylesheet">
     <!-- *Llamada a las hojas de estilos del framework -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -27,7 +28,12 @@
     <header id="header"></header>
     <div id="slide"></div>
     <main id="mainContent">
-        
+        <div class="ContenedorT">
+            <div class="ContenedorTitulo">
+                <h1> Trabajadores </h1>
+            </div>
+
+        </div>
     </main>
     <footer id="footer"></footer>
 
