--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -29,8 +29,9 @@
     <div id="slide"></div>
     <main id="mainContent">
         <div class="ContenedorT">
-            <div class="ContenedorTitulo">
-                <h1> Trabajadores </h1>
+            <div class="ContenedorTitulo position-relative">
+                <h1 class="titillium-web-semibold text40 textP"> Trabajadores </h1>
+                <div class="linea1"></div>
             </div>
 
         </div>
