--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -30,7 +30,7 @@
     <main id="mainContent">
         <div class="ContenedorT">
             <div class="ContenedorTitulo position-relative">
-                <h1 class="titillium-web-semibold text40 textP"> Trabajadores </h1>
+                <h3 class="titillium-web-semibold textP"> Trabajadores </h3>
                 <div class="linea1"></div>
             </div>
 
