Trabjadores y clientes modificaciones

--- a/vistas/privado/clientes.html
+++ b/vistas/privado/clientes.html
@@ -46,7 +46,7 @@
                         <!--div para la tabla-->
                         <div class="col-lg-10 offset-lg-1">
                             <!-- Tabla para mostrar los registros existentes -->
-                            <table class="table table-hover">
+                            <table class="table table-hover table-responsive">
                                 <!-- Encabezado de la tabla para mostrar la cantidad de registros y los títulos de las columnas -->
                                 <thead>
                                     <tr>
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12 bg-color-3blue" id="detalle_cliente">
+                <div class="col-lg-12 bg-color-3blue d-none" id="detalle_cliente">
                     <div class="d-flex offset-lg-1 align-items-center col-lg-4">
                         <img src="../../recursos/imagenes/icono_usuario_circulo.svg" class="me-3 mt-4 mb-3" width="65" alt="icono de usuario en circulo">
                         <h2 class="mt-2 mb-1 text-white">Detalles Clientes</h2>
@@ -145,10 +145,10 @@
                         </div>
                         <button type="button" class="btn btn-primary titillium-web-regular btn-lg bg-color-5blue my-3 me-2" style="background-color: #146A93; border-color: #146A93;"><i
                             class="bi bi-send"></i>
-                        Regresar</button>
+                            Regresar</button>
                         <button type="button" class="btn btn-primary titillium-web-regular btn-lg bg-color-5blue my-3" style="background-color: #146A93; border-color: #146A93;"><i
                             class="bi bi-send"></i>
-                        Editar</button>
+                            Editar</button>
                     </div>
                 </div>
             </div>
