--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -39,7 +39,7 @@
                     <li class="nav-item" role="presentation">
                         <button class="nav-link boton-cambiar-color" data-bs-toggle="tab" id="tabla-tab" type="button"
                             data-bs-target="#tabla" role="tab" aria-controls="tabla" aria-selected="true"
-                            onclick="cambiarColor(this)">
+                            onclick="showTableDiv(this)">
                             Tabla
                         </button>
                     </li>
@@ -47,7 +47,7 @@
                     <li class="nav-item ms-3" role="presentation">
                         <button class="nav-link boton-cambiar-color" data-bs-toggle="tab" id="agregar-tab" type="button"
                             data-bs-target="#agregar" role="tab" aria-controls="agregar" aria-selected="true"
-                            onclick="cambiarColor(this)">
+                            onclick="showAddDiv(this)">
                             Agregar
                         </button>
                     </li>
@@ -55,14 +55,80 @@
 
                 <div class="tab-content contenidoP position-relative" id="">
                     <div class="rectangle z-0"></div>
-                    <div class="tab-pane fade show z-3" role="tabpanel" id="agregar" aria-labelledby="agregar-tab">
-                        <h1>Agregar</h1>
-                    </div>
-                    <div class="tab-pane1 fade z-2 position-relative" role="tabpanel" id="tabla"
-                        aria-labelledby="tabla-tab">
-                    <div class="Contenedor tabla">
+                    <div class="tab-pane fade show z-3 d-none" role="tabpanel" id="agregar"
+                        aria-labelledby="agregar-tab">
+                        <div class="ContenedorTotal z-3">
+                            <div class="ContenedorTituloA">
+                                <h1 class="titillium-web-regular text25 text-white mb-3 mt-2">Agregar Trabajador</h1>
+                            </div>
 
+                            <div class="ContenedorForm">
+                                <form class="row needs-validation form1" novalidate>
+                                    <div class="col-md-6">
+                                        <label for="validationCustom01" class="form-label">Nombres</label>
+                                        <input type="text" class="form-control" id="validationCustom01" placeholder="Ingresa los nombres"
+                                            required>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="validationCustom02" class="form-label ">Apellidos</label>
+                                        <input type="text" class="form-control" id="validationCustom02" placeholder="Ingresa los apellidos"
+                                            required>
+                                    </div>
+                                    <div class="col-md-6 mt-3">
+                                        <label for="validationCustom02" class="form-label ">DUI</label>
+                                        <input type="text" class="form-control" id="validationCustom02" placeholder="Ingresa el dui"
+                                            required>
+                                    </div>
+                                    <div class="col-md-6 mt-3">
+                                        <label for="validationCustom02" class="form-label ">Teléfono</label>
+                                        <input type="text" class="form-control" id="validationCustom02" placeholder="Ingresa el número telefonico"
+                                            required>
+                                    </div>
+                                    <div class="col-md-6 mt-3">
+                                        <label for="validationCustom02" class="form-label ">Correo Electronico</label>
+                                        <input type="text" class="form-control" id="validationCustom02" placeholder="Ingresa el correo electronico"
+                                            required>
+                                    </div>
+                                    <div class="col-md-6 mt-3">
+                                        <label for="validationCustom02" class="form-label ">Fecha de Nacimiento</label>
+                                        <input type="text" class="form-control" id="validationCustom02" placeholder="Ingresa la fecha de nacimiento"
+                                            required>
+                                    </div>
+                                    <div class="col-md-6 mt-3">
+                                        <label for="validationCustom02" class="form-label">Fecha de Registro</label>
+                                        <input type="text" class="form-control" id="validationCustom02" placeholder="21/2/2024"
+                                            required>
+                                    </div>
+                                    <div class="col-md-6 mt-3">
+                                        <label for="validationCustom02" class="form-label ">Estado del Trabajador</label>
+                                        <input type="text" class="form-control" id="validationCustom02" placeholder="Vigente"
+                                            required>
+                                    </div>
+                                    <div class="col-md-6 mt-3">
+                                        <label for="validationCustom02" class="form-label ">Nivel de Usuario</label>
+                                        <input type="text" class="form-control" id="validationCustom02" placeholder="Ingresa el nivel de usuario"
+                                            required>
+                                    </div>
+                                    <div class="col-md-6 mt-3">
+                                        <label for="validationCustom02" class="form-label ">Contraseña</label>
+                                        <input type="text" class="form-control" id="validationCustom02" placeholder="Ingresa la contraseña"
+                                            required>
+                                    </div>
+                                    <div class="col-12 position-relative">
+                                        <div class="contenedorBotones2">
+                                            <button class="btn btn-primary" type="submit">Agregar</button>
+                                            <button type="button" class="btn btn-primary ms-2 shadow">Desbloquear</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
                     </div>
+                    <div class="tab-pane1 fade z-2 position-relative d-none" role="tabpanel" id="tabla"
+                        aria-labelledby="tabla-tab">
+                        <div class="Contenedor tabla">
+
+                        </div>
                         <div class="contenedorBotones">
                             <button type="button" class="btn btn2 btn-primary ms-4 shadow">Bloquear</button>
                             <button type="button" class="btn btn2 btn-primary ms-2 shadow">Desbloquear</button>
